<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Counter"
    android:id="@+id/counter_layout"
    android:orientation="vertical"
    android:background="@color/teal_700">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/topText"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textSize="70sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:id="@+id/resultText"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:background="@color/teal_200"
                android:id="@+id/buttonPlus"
                android:textSize="25sp"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:background="@color/teal_200"
                android:id="@+id/buttonMinus"
                android:textSize="25sp"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:background="@color/teal_200"
                android:textSize="25sp"
                android:id="@+id/buttonZero"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textSize="25sp"
                android:background="@color/teal_200"
                android:id="@+id/buttonAbout"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:id="@+id/aboutText"
                android:layout_marginTop="10dp"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>