<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GettingRegistration"
    android:id="@+id/gettingInformationLayout"
    android:orientation="vertical"
    android:background="@color/personalColor3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ultimateInformation"
                android:textSize="30sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/firstNamePlace"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/hintName"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lastNamePlace"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/hintName"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/agePlace"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/hintName"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:background="@color/personalColor2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/EditableInfo"
                android:textSize="30sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nameEdit"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/hintName"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/familyEdit"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/hintName"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ageEdit"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/hintName"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@color/white"
                android:background="@color/teal_200"
                android:layout_marginTop="30dp"
                android:textSize="30sp"
                android:id="@+id/backButton"
                android:onClick="backButton"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>